# interview-questions

./: .gitignore  todo.txt
caesar-cipher/: README.md  main.py  pyproject.toml  test_main.py  test_translation.py
counting-sort-1/: README.md  main.py  pyproject.toml  test_main.py
diagonal-difference/: README.md  main.py  pyproject.toml  test_main.py
flip-matrix/: main.py  pyproject.toml  test_main.py
grid-challenge/: README.md  main.py  pyproject.toml  test_main.py
hacker-rank/: Makefile-mysql  README.md
hacker-rank/breaking-best-and-worst-record/: main.py  pyproject.toml  test_record.py
hacker-rank/frequencies-queries/: Makefile  main.py  pyproject.toml
hacker-rank/mysql/: Makefile  README.md
hacker-rank/mysql-archived/: Makefile  social.sql
hacker-rank/mysql-average-salary/: new.mysql  solution.mysql
hacker-rank/mysql-bin/: shell.sh  start.sh
hacker-rank/mysql-binary-search-tree-1/: Makefile
hacker-rank/mysql-max-earning/: Makefile
hacker-rank/mysql-occupation/: new.mysql  solution.mysql
hacker-rank/mysql-the-company/: Makefile  solution.mysql
hacker-rank/mysql-triangle/: solution.sql
leetcode/: Makefile  lab.sh  pyproject.toml
leetcode/0015_3sum/: Makefile  README.md  test_three_sum.py  three_sum.py
leetcode/0027_remove_element/: Makefile  conftest.py  pyproject.toml  solution.py  test_solution.py
leetcode/0034_find_first_and_last_position_of_element_in_sorted_array/: README.md  conftest.py  pyproject.toml  solution.py  test_solution.py  test_support.py
leetcode/0035_search_insert_position/: README.md  conftest.py  solution.py  test_solution.py
leetcode/0036_valid_sudoku/: conftest.py  solution.py  test_solution.py
leetcode/0037_sudoku_solver/: conftest.py  solution.py  test_solution.py
leetcode/0038_count_and_say/: README.md  conftest.py  solution.py  test_solution.py
leetcode/0049_group_anagrams/: Makefile  README.md  conftest.py  solution.py  test_solution.py
leetcode/0051_n-queens/: Makefile  README.md  conftest.py  sandbox.py  solution.py  test_solution.py
leetcode/0055_jump_game/: conftest.py  solution.py  test_solution.py
leetcode/0066_plus_one/: Makefile  conftest.py  solution.py  test_solution.py
leetcode/0068_text_justification/: README.md  conftest.py  solution.py  test_solution.py
leetcode/0071_simplify_path/: conftest.py  solution.py  test_solution.py
leetcode/0073_set_matrix_zeroes/: README.md  conftest.py  solution.py  test_solution.py
leetcode/0075_sort_colors/: README.md  conftest.py  solution.py  (+1 more)
leetcode/3170_lexicographically_minimum_string_after_removing_stars/: Makefile  README.md  case3.txt  case4.txt  conftest.py  main.py  pyproject.toml  solution.py  test_solution.py
leetcode/leetcode_0035_search_insert_position/: README.md  main.py  pyproject.toml  solution.py  test_solution.py
leetcode/leetcode_0065_valid_number/: README.md  pyproject.toml  solution.py  test_solution.py
leetcode/leetcode_0145_binary_tree_postorder_traversal/: Makefile  Untitled.ipynb  draw_tree.py  pyproject.toml  solution.py  test_solution.py  tree.py  tree_sandbox.ipynb
leetcode/leetcode_0168_excel_sheet_column_title/: README.md  pyproject.toml  solution.py  test_solution.py
leetcode/leetcode_0190_reverse_bits/: README.md  pyproject.toml  solution.py  test_solution.py
leetcode/leetcode_0228_summary_ranges/: .Makefile.swp  .pyproject.toml.swp  .solution.py.swp  .test_solution.py.swp  README.md  pyproject.toml  solution.py  test_solution.py
leetcode/leetcode_0328_odd_even_linked_list/: Makefile  README.md  pyproject.toml  solution.py  test_append.py  test_solution.py
leetcode/leetcode_0450_delete_node_in_a_bst/: README.md  common.py  delete.yaml  pyproject.toml  solution.py  successor.yaml  test_delete.py  test_search.py  test_solution.py  test_successor.py
leetcode/leetcode_0543_diameter_of_binary_tree/: Makefile  main.py  pyproject.toml  simple_tree_sandbox.ipynb  solution.py  test_diameter.py  tree_sandbox.ipynb
leetcode/leetcode_0707_design_linked_list/: Makefile  README.md  pyproject.toml  solution.py  test_list.py  test_solution.py
leetcode/leetcode_0725_split_linked_list_in_parts/: README.md  pyproject.toml  solution.py  test_count.py  test_partition.py  test_solution.py
leetcode/leetcode_1450_number_of_students_doing_homework_at_a_given_time/: Makefile  main.py  pyproject.toml  solution.py  test_solution.py
leetcode/leetcode_3467_transform_array_by_parity/: README.md  pyproject.toml  solution.py  test_solution.py
lonely-integer/: README.md  main.py  pyproject.toml  test_main.py
mini-max-sum/: README.md  main.py  pyproject.toml  test_mini_max_sum.py
other/: CMakeLists.txt  Doxyfile  README.md  requirements.txt
other/linked_list_c/src/: CMakeLists.txt  SConscript  append.c  are_merged.c  constants.c  find_nth_node_from_tail.c  has_loop.c  length.c  linkedlist.c  linkedlist.h  merge_two_halves.c  reverse.c  skip_and_reverse.c  swap_nodes.c
other/linked_list_cpp/: CMakeLists.txt
other/linked_list_cpp/old/: CreateTest.cpp  HasLoopTest.cpp  List.h  PushBackTest.cpp  ReverseTest.cpp  SConscript  SConstruct  common.cpp  common.h  empty.cpp  g  has_loop.cpp  head_tail.cpp  init.cpp  push_back.cpp  reverse.cpp  size.cpp
other/linked_list_cpp/samples/: SConscript  iterator_example.cpp  std_list_iterator.cpp
other/linked_list_cpp/src/: LinkedList.cpp  LinkedList.h  iterator.cpp
other/linked_list_cpp/tests/: SConscript  SizeTests.cpp
other/max-profit/: Makefile  README.md  profit.py  pyproject.toml  test_max_profit.py
other/odd_even_arrangement_cpp/: CMakeLists.txt  README.md  odd_even_arrangement.cpp  odd_even_arrangement.h  odd_even_arrangement_tests.cpp
palindrome-index/: README.md  main.py  pyproject.toml  test_main.py
plus-minus/: README.md  main.py  pyproject.toml  test_plus_minus.py
recursive-digit-sum/: README.md  input09.txt  main.py  pyproject.toml  test_main.py
time-conversion/: README.md  main.py  pyproject.toml  test_main.py
towers-breaker/: README.md  main.py  pyproject.toml  test_main.py
zig-zag-sequence/: README.md  main.py  pyproject.toml  test_main.py
(+795 files in other folders)
