[project]
name = "grid-challenge"
version = "0.1.0"
description = "Sort grid by rows, are they also sorted by columns?"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "pudb>=2024.1.3",
    "pytest>=8.3.5",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.11.4",
]
