[project]
name = "palindrome-index"
version = "0.1.0"
description = "Remove a letter to make the string palindromic"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pudb>=2024.1.3",
    "pytest>=8.3.5",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.11.4",
]
