[project]
name = "leetcode-0065"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.50",
]

[tool.pytest.ini_options]
log_cli="true"
log_level="DEBUG"