[project]
name = "leetcode-0228"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "ty>=0.0.60",
]

[tool.pytest.ini_options]
pythonpath=[".", "../common"]
log_cli="true"
log_level="DEBUG"
