[project]
name = "leetcode-0328"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ipython>=9.14.1",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "ty>=0.0.52",
]

[tool.pytest.ini_options]
pythonpath = ["../common"]
log_cli="true"
log_level="DEBUG"
