[project]
name = "leetcode-0450"
version = "0.1.0"
description = "Delete Node in a BST"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]
[tool.pytest.ini_options]
pythonpath=[".", "../common"]
log_cli="true"
log_level="DEBUG"
