[project]
name = "tree-dia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "ipython>=9.13.0",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "pytest>=9.0.3",
    "pytest-pythonpath>=0.7.3",
    "ruff>=0.15.13",
]

[dependency-groups]
dev = [
    "ty>=0.0.39",
]
