[project]
name = "leetcode-3467"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.54",
]


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

# log_auto_indent (string)
# log_cli (bool):                Enable log display during test run
# log_cli_date_format (string)
# log_cli_format (string)
# log_cli_level (string)
# log_date_format (string)
# log_file_date_format (string)
# log_file_format (string)
# log_file_level (string)
# log_file_mode (string)
# log_file (string):             Default value for --log-file
# log_format (string):           Default value for --log-format
# log_level (string):            Default value for --log-level
